# functional_autoencoders

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
experiments/: custom_decoders.py  custom_encoders.py  main_run.py  plots.py  trainer_loader.py  util_exp.py
experiments/configs/: config_cnn.yaml  config_dirac_fae.yaml  config_dirac_vano.yaml  config_fae.yaml  config_fae_timing.yaml  config_sde1d.yaml  config_sde2d.yaml
experiments/exp_baseline_comparisons/: main.py  visualizations.ipynb
experiments/exp_dirac/: main.py  visualizations.ipynb
experiments/exp_rec_mse_vs_downsample_ratio/: main.py  visualizations.ipynb
experiments/exp_rec_mse_vs_point_ratio/: main.py  plots_rec_mse_vs_point_ratio.py  visualizations.ipynb
experiments/exp_sde1d/: main.py  plots_sde1d.py  visualizations.ipynb
experiments/exp_sde2d/: main.py  plots_sde2d.py  visualizations.ipynb
experiments/exp_sparse_training/: main.py  vis_latent_interpolation.ipynb  vis_patch_superresolution.ipynb  vis_reconstruction.ipynb  vis_samples_generation.ipynb  vis_very_high_resolution.ipynb
experiments/exp_sparse_vs_dense_wall_clock_training/: main.py  visualizations.ipynb
experiments/exp_train_vs_inference_wall_clock/: main.py  visualizations.ipynb
quickstart/: 0_Getting_Started.ipynb  1_FVAE.ipynb  2_FAE.ipynb  3_Custom_Datasets.ipynb  4_Custom_Architectures.ipynb
src/functional_autoencoders.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: dst.py  sobolev.py  util_test.py
(+44 files in other folders)
